configure route user schema

--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -4,7 +4,7 @@
   "description": "This is backend of ecommerce project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index.server.js"
   },
   "keywords": [
     "ecommerce",
@@ -16,9 +16,14 @@
   "author": "mohaimen khalid",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
